Fix: Set index.html as homepage for GitHub Pages

--- a/Diary.html
+++ b/Diary.html
@@ -8,9 +8,8 @@
     <title>My Diary</title>
   </head>
   <body>
-    <!-- <a class="back-icon" href="opening.html"><img src="image-wb.png" alt="back-icon" class="dark-mode-back"></a> -->
     <div class="back">
-    <a href="opening.html"> 
+    <a href="index.html"> 
       <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="undefined"><path d="m313-440 224 224-57 56-320-320 320-320 57 56-224 224h487v80H313Z"/></svg>
     </a>
     </div>
