--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="back">
-  <a href="opening.html">
+  <a href="index.html">
     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="undefined"><path d="m313-440 224 224-57 56-320-320 320-320 57 56-224 224h487v80H313Z"/></svg>
   </a>
   </div>
